--- a/package.json
+++ b/package.json
@@ -7,8 +7,11 @@
   },
   "dependencies": {
     "buchta": "latest",
+    "canvas-confetti": "^1.6.0",
     "highlight.js": "^11.7.0",
+    "siema": "^1.5.1",
     "svelte": "^3.55.1",
+    "svelte-confetti": "^1.2.2",
     "tailwindcss": "^3.2.4",
     "uglify-js": "^3.17.4"
   }
