--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "buchta": "latest",
     "canvas-confetti": "^1.6.0",
     "highlight.js": "^11.7.0",
+    "marked": "^4.2.12",
     "siema": "^1.5.1",
     "svelte": "^3.55.1",
     "svelte-confetti": "^1.2.2",
