--- a/package.json
+++ b/package.json
@@ -10,10 +10,10 @@
     "canvas-confetti": "^1.6.0",
     "highlight.js": "^11.7.0",
     "marked": "^4.2.12",
+    "mime-types": "^2.1.35",
     "siema": "^1.5.1",
     "svelte": "^3.55.1",
     "svelte-confetti": "^1.2.2",
-    "tailwindcss": "^3.2.4",
-    "uglify-js": "^3.17.4"
+    "tailwindcss": "^3.2.4"
   }
 }
