--- a/package.json
+++ b/package.json
@@ -6,12 +6,9 @@
     "bun-types": "^0.4.0"
   },
   "dependencies": {
-    "buchta": "latest",
-    "canvas-confetti": "^1.6.0",
+    "buchta": "0.5.11",
     "highlight.js": "^11.7.0",
     "marked": "^4.2.12",
-    "mime-types": "^2.1.35",
-    "siema": "^1.5.1",
     "svelte": "^3.55.1",
     "svelte-confetti": "^1.2.2",
     "tailwindcss": "^3.2.4"
